Add alt for mobile

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <nav>
             <figure class="contenantlelogo">
-                <img class="logo"src="image/airbnb_desk.ico" alt="Logo principale">
-                <img class="logotablette"src="image/Airbnb_tablette.png" alt="logo pour tablette">
-                <img class="logophone"src="image/Airbnb_phone.png" alt="logo pour smartphones">
+                <img class="logo" src="image/airbnb_desk.ico" alt="Logo principale">
+                <img class="logotablette" src="image/Airbnb_tablette.png" alt="logo pour tablette">
+                <img class="logophone" src="image/Airbnb_phone.png" alt="logo pour smartphones">
             </figure>
             <ul class="navigation">
                 <li>Devenez hôte</li>
@@ -36,7 +36,7 @@
             <label for="Quand">Quand</label>
             <input type="text" id="Quand" name="Quand" placeholder="Quand">
             <label for="Voyageur">Voyageur</label>
-            <select class="voyageur "name="voyageur" id="Voyageur">
+            <select class="voyageur " name="voyageur" id="Voyageur">
           <optgroup label="Adulte">
              <option value="1">1</option>
              <option value="2">2</option>
@@ -78,24 +78,24 @@
     <section>
         <h2>Réservées à l'instant</h2>
         <figure>
-            <img class="img"src="image/figure1.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure1.resized.jpg" alt="">
+            <img class="img" src="image/figure1.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure1.resized.jpg" alt="image chargé sur moile, activité proposé par le site (Tiramisu)">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
                 <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure2.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure2.resized.jpg" alt="">
+            <img class="img" src="image/figure2.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure2.resized.jpg" alt="image chargé sur moile, activité proposé par le site (pate)">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure3.jpg" alt="choix de destination">
+            <img class="img" src="image/figure3.jpg" alt="choix de destination">
             <figcaption class="img">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure4.jpg" alt="choix de destination">
+            <img class="img" src="image/figure4.jpg" alt="choix de destination">
             <figcaption class="img">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
@@ -107,24 +107,24 @@
     <section>
         <h2>Expériences</h2>
         <figure>
-            <img class="img"src="image/figure5.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure5.resized.jpg" alt="">
+            <img class="img" src="image/figure5.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure5.resized.jpg" alt="image chargé sur moile, activité proposé par le site (préparation de gateau)">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure6.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure6.resized.jpg" alt="">
+            <img class="img" src="image/figure6.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure6.resized.jpg" alt="image chargé sur moile, activité proposé par le site(cuisine)">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure7.jpg" alt="choix de destination">
+            <img class="img" src="image/figure7.jpg" alt="choix de destination">
             <figcaption class="img">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure8.jpg" alt="choix de destination">
+            <img class="img" src="image/figure8.jpg" alt="choix de destination">
             <figcaption class="img">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
@@ -136,24 +136,24 @@
     <section>
         <h2>Divertissements</h2>
         <figure>
-            <img class="img"src="image/figure9.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure9.resized.jpg" alt="">
+            <img class="img" src="image/figure9.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure9.resized.jpg" alt="image chargé sur moile, activité proposé par le site (concert)">
             <figcaption>73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure10.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure10.resized.jpg" alt="">
+            <img class="img" src="image/figure10.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure10.resized.jpg" alt="image chargé sur moile, activité proposé par le site (randonnée)">
             <figcaption>29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure11LA.jpg" alt="choix de destination">
+            <img class="img" src="image/figure11LA.jpg" alt="choix de destination">
             <figcaption class="img">57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img class="img"src="image/figure13PRS.jpg" alt="choix de destination">
+            <img class="img" src="image/figure13PRS.jpg" alt="choix de destination">
             <figcaption class="img">91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
@@ -165,24 +165,24 @@
     <section>
         <h2>Destinations à la une</h2>
         <figure class="florence">
-            <img class="img"src="image/figure14FRZ.jpg" alt="choix de destination">
+            <img class="img" src="image/figure14FRZ.jpg" alt="choix de destination">
             <figcaption class="img"> 73€ Take a crush course in artisan wallpaper-making
               <img src="image/prix.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure class="sanfrancisco">
-            <img class="img"src="image/figure15SF.jpg" alt="choix de destination">
+            <img class="img" src="image/figure15SF.jpg" alt="choix de destination">
             <figcaption class="img">29€ Let's Photography together
                 <img src="image/prix3.png" alt="prix du voyage"></figcaption>
         </figure>
         <figure>
-            <img class="destination"src="image/figure15SF.resized.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure15SF.resized.jpg" alt="">
+            <img class="destination" src="image/figure15SF.resized.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure15SF.resized.jpg" alt="image chargé sur moile, destination proposé par le site">
             <figcaption>57€ Get a taste of an authantic tapas
                 <img src="image/prix2.png" alt="prix du séjour"></figcaption>
         </figure>
         <figure>
-            <img class="destination"src="image/figure13PRS.resized.jpg" alt="choix de destination">
-            <img class="imgphone"src="image/figure13PRS.resized.jpg" alt="">
+            <img class="destination" src="image/figure13PRS.resized.jpg" alt="choix de destination">
+            <img class="imgphone" src="image/figure13PRS.resized.jpg" alt="image chargé sur moile, destination proposé par le site">
             <figcaption>91€ Feel-good vibes intimate setting
                 <img src="image/prix4.png" alt=""></figcaption>
         </figure>
@@ -194,8 +194,8 @@
     <section>
         <form>
         <figure class="figestimer">
-            <img class="imageestimer"src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
-             <img class="imgphone"src="image/imageestimer.resized.jpg" alt="">
+            <img class="imageestimer" src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
+             <img class="imgphone" src="image/imageestimer.resized.jpg" alt="image chargé sur moile, estimer mes revenus">
            </figure>
              <h2 class="h2estimer">Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
              <p>Complétez vos revenus en accueillant des voyageurs.</p>
@@ -283,7 +283,7 @@
         </form>
 
 <figure>
-  <img class="marque"src="image/footer.png" alt="marque déposée">
+  <img class="marque" src="image/footer.png" alt="marque déposée">
 </figure>
 
 <ul class="politique">
@@ -293,7 +293,7 @@
 </ul>
 
 <figure>
-  <img class="reseaux"src="image/réseaux.png" alt="">
+  <img class="reseaux" src="image/réseaux.png" alt="">
 </figure>
     </footer>
 
