Add size for p in footer for mobile

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <form>
         <figure class="figestimer">
             <img class="imageestimer" src="image/imageestimer.jpg" alt="illustration estimer mes revenus">
-             <img class="imgphone" src="image/imageestimer.resized.jpg" alt="image chargé sur moile, estimer mes revenus">
+             <img class="imgphones" src="image/imageestimer.resized.jpg" alt="image chargé sur moile, estimer mes revenus">
            </figure>
              <h2 class="h2estimer">Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
              <p>Complétez vos revenus en accueillant des voyageurs.</p>
